--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+  
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1384990129912719"
+     crossorigin="anonymous"></script>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>암기력 향상 콘텐츠 - FlashBoost</title>
@@ -45,8 +49,87 @@
       border: 1px dashed #999;
     }
   </style>
+
+<style>
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #f8f9fb;
+    color: #333;
+    margin: 0;
+    padding: 0;
+  }
+
+  .header {
+    text-align: center;
+    padding: 50px 0;
+    background-color: #333;
+    color: white;
+    border-bottom: 5px solid #f1c40f;
+  }
+
+  .header h1 {
+    font-size: 3em;
+    font-weight: bold;
+  }
+
+  .header p {
+    font-size: 1.2em;
+  }
+
+  .container {
+    width: 80%;
+    margin: 50px auto;
+    background-color: white;
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  }
+
+  .content-section {
+    margin-bottom: 50px;
+  }
+
+  .content-section h2 {
+    font-size: 2.5em;
+    color: #2c3e50;
+  }
+
+  .content-section p {
+    font-size: 1.2em;
+    line-height: 1.6;
+    color: #34495e;
+  }
+
+  .btn {
+    display: inline-block;
+    background-color: #f1c40f;
+    color: white;
+    padding: 15px 30px;
+    border-radius: 30px;
+    font-size: 1.2em;
+    text-decoration: none;
+    transition: all 0.3s ease;
+  }
+
+  .btn:hover {
+    background-color: #e67e22;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  }
+
+  .footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+  }
+</style>
+
 </head>
 <body>
+  <div class="container">
   <h1>📘 암기력 향상을 위한 콘텐츠 모음</h1>
   <nav>
     <a href="#content">메인 콘텐츠</a>
@@ -115,5 +198,6 @@
     <h2>개인정보처리방침</h2>
     <p>본 사이트는 사용자의 개인정보를 수집하지 않으며, 광고 목적으로만 방문 기록이 Google Analytics 등 외부 도구를 통해 활용될 수 있습니다. 수집되는 정보는 Google의 정책에 따라 처리되며, 사용자는 언제든지 브라우저 설정을 통해 쿠키 차단이 가능합니다.</p>
   </section>
+  </div>
 </body>
 </html>
