--- a/집중력-높이는-식사.html
+++ b/집중력-높이는-식사.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlashBoost</title>
+    <title>집중력 높이는 법</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -18,8 +18,8 @@
         </nav>
     </header>
     <main>
-        <h1>FlashBoost - 공부법 콘텐츠</h1>
-        <p>효율적인 공부법을 배우고, 더 빠르고 효과적으로 학습하세요!</p>
+        <h1>집중력 높이는 법</h1>
+        <p>뇌에 좋은 음식과 집중력을 높여주는 운동법을 소개합니다.</p>
     </main>
     <footer>
         <p>&copy; 2025 FlashBoost</p>
