--- a/학습목표-설정법.html
+++ b/학습목표-설정법.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlashBoost</title>
+    <title>학습 목표 설정법</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -18,8 +18,8 @@
         </nav>
     </header>
     <main>
-        <h1>FlashBoost - 공부법 콘텐츠</h1>
-        <p>효율적인 공부법을 배우고, 더 빠르고 효과적으로 학습하세요!</p>
+        <h1>학습 목표 설정법</h1>
+        <p>SMART 목표 설정법과 목표 달성 전략에 대해 배워보세요.</p>
     </main>
     <footer>
         <p>&copy; 2025 FlashBoost</p>
