--- a/효율적인-시간-관리법.html
+++ b/효율적인-시간-관리법.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlashBoost</title>
+    <title>효율적인 시간 관리법</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -18,8 +18,8 @@
         </nav>
     </header>
     <main>
-        <h1>FlashBoost - 공부법 콘텐츠</h1>
-        <p>효율적인 공부법을 배우고, 더 빠르고 효과적으로 학습하세요!</p>
+        <h1>효율적인 시간 관리법</h1>
+        <p>Pomodoro 기법, 타임블로킹 등을 활용하여 효율적으로 시간을 관리하는 방법을 소개합니다.</p>
     </main>
     <footer>
         <p>&copy; 2025 FlashBoost</p>
